--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,13 @@
             <artifactId>h2</artifactId>
             <version>1.4.195</version>
         </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 
