--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,11 @@
          version="3.1">
 
     <display-name>Zoo Control System</display-name>
+    <listener>
+        <listener-class>
+            database.MyServletContextListener
+        </listener-class>
+    </listener>
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
